0.1:
		* initial version
0.1.1:
		* add candle/whisker plots

0.1.1.1:
		* export MinMaxSeries

0.1.1.2:
		* fixed examples for Scale (Log/Linear)

0.1.1.3:
		* fixed bug (lack of stroke) with datasets larger than window
		* hollow points fill with white

0.1.1.4:
		* remove Unicode dependency

0.1.2:
		* improve axis line joins
		* annotations

0.1.2.1:
		* save/restore cairo annotation
		* add setDataset documentation
		* improve Dashes
		* formattable grid lines

0.1.2.2:
		* FormattedSeries, not DecoratedSeries in setDataset documentation

0.1.2.3:
		* export withGridLine

0.1.2.4:
		* bumped gtk dependency
		* changed 'State' constructor to 'state' function to reflect mtl > 2

0.1.2.5:
		* fixed bug in surface axis labels

0.1.2.6:
		* fixed treatment of 0 in log axes
		* fixed reversed range values
		  * thus reverting 0.1.2.5 non-bug
		* export Data.Colour.Names

0.1.3.0:
		* change scaling so that miniscule linewidths don't occur

0.1.3.1:
		* fix error in scaling

0.1.3.2:
		* more fix treatment of 0 in log axes

0.1.3.3:
		* 

0.1.3.4:
		* switch to github

0.1.3.5:
		* fixed .cabal repository line

0.1.4:
		* fix finding min/max of MinMax series
		* fix bar width for Candle/Whisker
		* fix x coordinate of Whisker
		* change bar width for Bar

0.1.4.1:
		